--- a/goal_tracker/app/views/layouts/application.html.erb
+++ b/goal_tracker/app/views/layouts/application.html.erb
@@ -8,7 +8,19 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+
+
+
   <body>
+    <% if logged_in? %>
+    <%= current_user.username %>
+    <%= button_to "Sign Out", session_url, method: :delete %>
+    <% else %>
+    <!-- <%#= link_to "Sign In", new_session_url %> -->
+    <!-- <%#= link_to "Sign Up", new_user_url %> -->
+    <% end %>
     <%= yield %>
   </body>
+
+
 </html>
